--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is an application designed to get me hired.
-It's hosted on Heroku at darrowportfoliocentral.heroku.com
+It's hosted on Heroku at apcentral.heroku.com
 If you're interested in making your own based on this, go for it. I hope it works well for you. 
 
 This application is written as a Node.js app, and holds no major significance. 
